syntax = "proto3";

package model;

option java_package = "io.lantern.messaging";

enum MessageDirection {
  OUT = 0;
  IN = 1;
}

// A contact in the address book
message Contact {
  enum Type {
    DIRECT = 0; // e.g. a person
    GROUP = 1;
  }

  Type type = 2; //
  string id = 3; // the public IdentityKey for direct contacts, the globally unique group id (type 4 UUID) for groups, both base32 encoded
  repeated string memberIds = 4; // the ids of group member Contacts, base32 encoded (only applies to Contacts of type GROUP)
  string displayName = 5; // the display name shown for this Contact (specific to our current device, the contact may have different display names in other people's address books)
  int64 createdTime = 6; // the millisecond unix timestamp when this contact was created
  int64 mostRecentMessageTs = 7; // the unix timestamp of the most recent message with this contact
  MessageDirection mostRecentMessageDirection = 8; // direction of the most recent message with this contact
  string mostRecentMessageText = 9; // the text of the most recent message with this contact
  string mostRecentAttachmentMimeType = 10; // the mime type of the most recent attachment with this contact
}

// An attachment to a Message
message Attachment {
  string mimeType = 1; // the MIME type for this attachment
  bytes keyMaterial = 2; // 64 bytes of key material (32 bytes for AES256 encryption, 32 bytes for HmacSHA256 authentication)
  bytes digest = 3; // secure digest of the attachment
  int64 plaintextLength = 4; // the content length of the plain text
  map<string, string> metadata = 5;
  string downloadUrl = 6; // the URL from which the encrypted attachment can be downloaded
}

// A locally stored Attachment
message StoredAttachment {
  enum Status {
    PENDING = 0; // attachment has not yet been uploaded/downloaded
    DONE = 1; // attachment has been uploaded/downloaded
    FAILED = 2; // attachment permanently failed to upload/download
  }

  string guid = 1; // a globally unique ID for the attachment
  Attachment attachment = 2; // the Attachment
  string filePath = 3; // path to the on-disk location of this attachment
  Status status = 4; // the status of the upload/download
}

// A text message with attachments, the primary type of message exchanged by users.
message Message {
  bytes id = 1; // the id of the message, unique under the given sender
  bytes replyToSenderId = 2; // if this message is a reply to another message, this contains the ID of the sender of that message
  bytes replyToId = 3; // if this message is a reply to another message, this contains the ID of that message
  string text = 4;
  map<int32, Attachment> attachments = 5; // attachments keyed to unique IDs for each attachment within this message
}

// A locally stored Message
message StoredMessage {
  enum DeliveryStatus {
    SENDING = 0; // message is currently pending send but hasn't successfully finished yet
    PARTIALLY_SENT = 1; // message has been successfully sent to some of the recipients, will retry other recipients
    COMPLETELY_SENT = 2; // message has been successfully sent to all recipients
    PARTIALLY_FAILED = 3; // message failed to send to a subset of recipients, will not retry
    COMPLETELY_FAILED = 4; // message failed to send to any recipients, will not retry
  }

  string senderId = 1; // the id of who sent this message
  string id = 2; // the id of the message (same as on Message), encoded in base32
  int64 ts = 3; // The unix timestamp in nanoseconds for when the message was sent (for OUT) or received (for IN)
  string replyToSenderId = 4; // if this message is a reply to another message, this contains the ID of the sender of that message
  string replyToId = 5; // if this message is a reply to another message, this contains the ID of that message
  string text = 6;
  map<int32, StoredAttachment> attachments = 7; // attachments keyed to unique IDs for each attachment within this message
  MessageDirection direction = 8; // direction in which the message is going/came
  DeliveryStatus status = 9; // for outgoing messages, the status of its sending and delivery
}

// A reaction to a message
message Reaction {
  bytes reactingToSenderId = 1; // the id of the sender of the message to which this is reacting
  bytes reactingToMessageId = 2; // the id of the message to which this is reacting
  string emoticon = 3; // a single character emoticon representing the reaction
}

// An instruction to set messages in a conversation to automatically delete after reaching a certain
// age.
message SetAutoDeleteAge {
  int32 ageInSeconds = 1; // messages in the relevant conversation older than this age in seconds will be automatically deleted
}

// An envelope for messages to be transferred via the message broker
message TransferMessage {
  oneof content {
    bytes message = 1; // serialized Message
    bytes reaction = 2; // serialized Reaction
    bytes deleteMessageId = 100; // the id of a message from this Sender to delete
    bytes setAutoDeleteAge = 4; // serialized SetAutoDeleteAge
  }
}

// An outbound Message
message OutboundMessage {
  enum SubDeliveryStatus {
    SENDING = 0; // message is currently in the process of sending to specific deviceId but hasn't successfully finished yet
    SENT = 1; // message has been sent to specific deviceId
  }

  string id = 1; // a unique identifier for this
  string senderId = 2; // the id of who sent this message (same as on StoredMessage)
  string recipientId = 3; // the id of the recipient
  int64 sent = 4; // The unix timestamp in nanoseconds for when the message was sent
  map<string, SubDeliveryStatus> subDeliveryStatuses = 5; // Statuses of subdeliveries to specific deviceIds
  oneof content {
    string messageId = 31; // the id of the message (same as on Message), encoded in base32
    bytes reaction = 32; // serialized Reaction
    bytes deleteMessageId = 33; // the id of a message from this Sender to delete
    bytes setAutoDeleteAge = 34; // serialized SetAutoDeleteAge
  }
}

// An inbound Attachment
message InboundAttachment {
  string senderId = 1; // the id of who sent the message associated to the attachment
  string messageId = 2; // the id of the StoredMessage, encoded in base32
  int64 ts = 3; // The unix timestamp in nanoseconds for when the message was received (has to match what's on the StoredMessage
  int32 attachmentId = 4; // The id of the attachment within the Message
}